--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -269,6 +269,14 @@ Navigation
 .nav {
   text-align: right;
 }
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
+}
 .primary-header a,
 .primary-footer a {
   color: #fff;
@@ -284,6 +292,55 @@ Rows
 */
 .row {
   background: #fff;
+ padding: 66px 0 44px 0;
+}
+.row,
+.row-alt {
   min-width: 960px;
-  padding: 66px 0 44px 0;
+}
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right,#a1d3b0, #f6f1d3 );
+  background: -moz-linear-gradient(to right,#a1d3b0, #f6f1d3 );
+  background: linear-gradient(to right,#a1d3b0, #f6f1d3 );
+  padding: 44px 0 22px 0;
+}
+/*
+========================
+Leads
+========================
+*/
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
+}
+/*
+  ========================================
+  Speakers
+  ========================================
+*/
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding-bottom:  22px;
+  text-align: center;
+}
+.speaker {
+  margin-bottom: 44px;
+}
+.teaser img {
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%;
+}
+.speaker-info img {
+  border-radius: 50%;
+  height: 130px;
+  margin: -66px 0 22px 0;
+  vertical-align: top;
 }
